--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -2,18 +2,27 @@
 @import "variables";
 .work {
     padding-top: 60px;
-    
+
+    @media (min-width: 900px) {
+        .spacer {
+            min-width: 50%;
+        }
+    }
+
+    @media (max-width: 900px) {
+        .spacer {
+            min-width: $margins;
+        }
+    }
+
     #work_section {
         #work_head {
             display: flex;
-            justify-content: center;
             grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));;
             @media only screen and (max-width: 900px) {
                 justify-content: flex-start;
-                margin-left: $margins;
             }
             #work_title {
-                margin-left: 8%;
                 font-size: 41px;
                 font-weight: 700;
             }
@@ -41,11 +50,6 @@
             scrollbar-width: none;
             z-index: -2;
 
-            //-webkit-overflow-scrolling: touch;
-            //scroll-snap-type: x mandatory;
-
-            border-radius: 20px;
-
             -ms-overflow-style: none;  /* IE and Edge */
 
             /* Hide scrollbar for Chrome, Safari and Opera */
@@ -55,20 +59,6 @@
 
             &::-moz-scrollbar {
                 display: none;
-            }
-
-            // to see if drag to scroll works
-            // bigger screens
-            @media (min-width: 1000px) {
-                .spacer {
-                    min-width: 50%;
-                }
-            }
-
-            @media (max-width: 1000px) {
-                .spacer {
-                    min-width: 10%;
-                }
             }
 
             .use-case {
